@@ -1,3 +1,9 @@
+lilv (0.24.1) unstable;
+
+  * Fix comparison of restored states with paths
+
+ -- David Robillard <d@drobilla.net>  Mon, 26 Sep 2016 12:51:37 -0400
+
 lilv (0.24.0) stable;
 
   * Add new hand-crafted Pythonic bindings with full test coverage
